--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -51,7 +51,8 @@ The wise listens to your playing, e.g. to monitor bends or scales
 Learn licks (only a few included, but pointers to find more)
 .IP -
 .B quiz: 
-Train your ear, memory and knowledge of music theory
+Train your ear, memory and knowledge of music theory. This is
+actually fun and a great way to start with harpwise.
 .RE
 
 And with a less interactive interface and not using your microphone:
