--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -161,6 +161,22 @@ https://github.com/marcIhm/harpwise/blob/main/README.org
 
 ~/.harpwise/config.ini
 
+.SH "DIAGNOSIS"
+
+Harpwise uses the excellent program sox (aka play, aka rec) to
+interact with your sound system. Sox handles all playing and
+recording of sounds.
+
+However, sometimes, sox might not be configured correctly out of the
+box. If you feel, that sox (and therefore harpwise) has problems
+with sounds or if you see spurious error messages, you may invoke:
+  
+.IP
+harpwise tools diag
+.RE
+
+to execute two basic tests and get some advice.
+
 .SH "QUICK START"
 
 Prepare your personal config with sound samples:
