new option --show-options

--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -161,6 +161,16 @@ https://github.com/marcIhm/harpwise/blob/main/README.org
 
 ~/.harpwise/config.ini
 
+.SH "COMMANDLINE OPTIONS"
+
+Options are specific for each mode; as an example you may type
+
+.IP
+harpwise listen -o
+.RE
+
+to read options for mode 'listen' (e.g.).
+
 .SH "DIAGNOSIS"
 
 Harpwise uses the excellent program sox (aka play, aka rec) to
