--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -25,8 +25,8 @@ scales, intervals or licks on a diatonic (richter) or chromatic
 harmonica for various keys.
 
 The wise recognizes single notes, that you play and it may play chords
-for you (but does not recognize your chords); rhythm is out of its
-scope entirely.
+for you (but can not identify your chords); it touches tempo, but not
+rhythm.
 
 The primary documentation of harpwise is its usage information, that
 can be retrieved by calling it without arguments:
@@ -45,14 +45,14 @@ When invoking harpwise, the first argument on the commandline
 specifies the mode of operation; it can be one of:
 .IP - 2
 .B listen:
-The wise listens to your playing, e.g. to monitor bends or scales
+The wise listens to your playing, e.g. to monitor scales or bends
 .IP -
-.B quiz: 
-Train your ear, memory and knowledge of music theory. This is
-actually fun and a great way to start with harpwise.
+.B quiz:
+Train your ear, memory and knowledge of music theory. This is actually
+fun and a engaging way to start with harpwise.
 .IP -
 .B licks: 
-Learn licks (only a few included, but pointers to find more)
+Learn licks (only a few included, but pointers for more)
 .RE
 
 And with a less interactive interface and not using your microphone:
