--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -140,10 +140,11 @@ blues-scale, which are given as arguments and form an adhoc scale:
 
 The possible scales depend on the chosen type of harmonica:
 
-scales for chromatic: all, blues, chord-i, chord-iv, chord-v, one, two
-  scales for richter: all, arabic, blues, blues-middle, chord-i, chord-iv, chord-v, 
-    drawbends, major, major-pentatonic, mape, mape4, mape5, middle, minor, 
-    minor-pentatonic, mipe, mixolydian, root
+scales for chromatic: all, blues, chord-i, chord-i7, chord-iv, chord-iv7, 
+    chord-v, chord-v7, one, two
+  scales for richter: all, arabic, blues, blues-middle, chord-i, chord-i7, 
+    chord-iv, chord-iv7, chord-v, chord-v7, drawbends, major, major-pentatonic, 
+    mape, mape4, mape5, middle, minor, minor-pentatonic, mipe, mixolydian, root
   
 .SH "OPTIONS"
 
