--- a/README.org
+++ b/README.org
@@ -57,7 +57,7 @@
   
   [[images/screenshot_quiz.png]]
 
-  <script async id="asciicast-670612" src="https://asciinema.org/a/670612.js"></script>
+  <a href="https://asciinema.org/a/670611" target="_blank"><img src="https://asciinema.org/a/670611.svg" /></a> 
 
 * Installation
 
