--- a/images/README.org
+++ b/images/README.org
@@ -10,37 +10,49 @@
 
   ./harpwise quiz replay 5 richter c blues --add-scales chord-v --display chart-notes --screenshot
 
-* How to produce ascii-casts
+* How to produce ascii-casts as gifs
 
-  With: stty size = 25 78
+  Termina:
+  - stty size = 25 84
 
-  PS1="\$ "
-  clear
+  Preparation:
+  - in .bashrc:
+    - PS1="\$ "
+    - alias harpwise='/home/ihm/harpwise/harpwise'
+  - in .harpwise/config.ini: difficulty auf 0
 
   Tools:
   - asciinema (from repositories)
-  - agg  (https://github.com/asciinema/agg)  
+  - agg  (https://github.com/asciinema/agg)
+    
 ** Listen
    
-   asciinema rec -q -t "harpwise listen" -c "~/harpwise/harpwise listen c" --overwrite ~/harpwise-listen.cast
+   asciinema rec -t "harpwise listen" --overwrite harpwise-listen.cast
+
+   - harpwise listen c
 
    - Spielen
-     - Blues Scale
+     - -4 +4 -4 -3 +3 +2 -1 -3 -2
    - Help
      - j
    - Journal
-     - +1 +2 +3 +4 +5 +6
+     - -4 +4 -4 -3 +3 +2 -1 -3 -2
+   - ctrl-c
 
-   .cargo/bin/agg --line-height 1.2 --font-size 26 harpwise-listen.cast harpwise-listen.gif
+   edit cast-file remove everything after "exit on ctrl-c"
+   
+   ~/.cargo/bin/agg --line-height 1.2 --font-size 14 harpwise-listen.cast harpwise-listen.gif
 
 ** quiz
    
-   asciinema rec -q -t "harpwise quiz" -c "~/harpwise/harpwise quiz choose --difficulty easy" --overwrite ~/harpwise-quiz.cast
+   asciinema rec -t "harpwise quiz" --overwrite harpwise-quiz.cast
 
+   - harpwise quiz choose --difficulty easy
+     
    Then:
-   - 'describe' (choose by typing down)
+   - 'describe' (choose by typing 'down')
      - do not scroll
-   - 'hole-hide-note' (down)
+   - 'hear-key' (three times 'right')
      - ',solve'
      - ctrl-z
      - tab
@@ -50,5 +62,8 @@
      - ctrl-z
      - tab
    - 'keep-tempo' (choose by typing name)
-     - ctrl-c
-    
+   - ctrl-c
+
+   edit cast-file and remove everything after "exit on ctrl-c"
+       
+   .cargo/bin/agg --line-height 1.2 --font-size 14 harpwise-quiz.cast harpwise-quiz.gif
