--- a/README.org
+++ b/README.org
@@ -3,9 +3,9 @@
 * Summary
 
 A harmonica tool for the command line, using microphone and speaker. It
-can assist your playing with scales and licks; it offers an explorable
-quiz with many flavours and it brings tools and players for the various
-needs of a harp-player (either richter or chromatic).
+assists your playing with scales and licks and can follow along the chords
+of a song. Harpwise offers various tools and players and has an explorable
+quiz with many flavours.
   
 * Table of Contents                                                   :TOC_1:
 
@@ -47,8 +47,8 @@ needs of a harp-player (either richter or chromatic).
   these may help to:
 
   - Learn scales and intervals
-  - Play through a chord progression
-  - Learn and memorize licks (a few sample-licks included)
+  - Play through a chord progression with scales and licks
+  - Learn and memorize licks (a few samples included)
   - Train your ear and musical memory
   - Learn related music theory by the way of quiz
   - Help to gather and learn a collection of licks
