starter kit of samples

--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -72,8 +72,10 @@ Some simple, non-interactive tools related to basic harmonica theory
 .IP -
 .B calibrate:
 Wise generates samples for holes, or assists in recording your own;
-this is a prereq to using many other modes; you will be asked
-to invoke it, when necessary
+this is a prerequisite for using many other modes; you will be asked
+to invoke it, when necessary. Note, that for convenience, type 'richter'
+and key of 'c' does not require calibration, as the relevant
+samples are already included.
 .RE
 
 to read more details, usage examples and options for the individual
@@ -203,12 +205,6 @@ harpwise tools diag
 to execute two basic tests and get some advice.
 
 .SH "QUICK START"
-
-Prepare your personal config with sound samples:
-
-.IP
-harpwise calibrate c --auto    
-.RE
 
 Feedback on what you are playing:
 
