--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -70,11 +70,11 @@ Also print various informationo about licks, scales and much more
 .B tools: 
 Some simple, non-interactive tools related to basic harmonica theory		
 .IP -
-.B calibrate:
-Wise generates samples for holes, or assists in recording your own;
-this is a prerequisite for using many other modes; you will be asked
-to invoke it, when necessary. Note, that for convenience, type 'richter'
-and key of 'c' does not require calibration, as the relevant
+.B samples:
+The wise assists in recording your own samples or generates them for
+you; this is a prerequisite for using many other modes, so you will be
+asked to invoke it, when necessary. Note, that for convenience, type 'richter'
+and key of 'c' does not require this, as the relevant
 samples are already included.
 .RE
 
