--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -218,7 +218,7 @@ Or try
 harpwise quiz random
 .RE
 
-for a fun way to improve you musical skills.
+for a fun way to improve your harmonica knowledge.
 
 .SH EXAMPLES
 
