--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -146,8 +146,8 @@ scales for chromatic: all, blues, chord-i, chord-i7, chord-iv, chord-iv7,
     chord-v, chord-v7, one, two
   scales for richter: all, arabic, blues, blues-middle, chord-i, chord-i7, 
     chord-i7om3, chord-iv, chord-iv7, chord-iv7om3, chord-v, chord-v7, 
-    chord-v7om3, drawbends, major, major-pentatonic, mape, mape4, mape5, middle, 
-    minor, minor-pentatonic, mipe, mixolydian, root
+    chord-v7om3, drawbends, major, major-full, major-pentatonic, mape, mape4, 
+    mape5, middle, minor, minor-pentatonic, mipe, mixolydian, root
   
 .SH "OPTIONS"
 
