--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -142,13 +142,16 @@ blues-scale, which are given as arguments and form an adhoc scale:
 
 The possible scales depend on the chosen type of harmonica:
 
-scales for chromatic: all, blues, chord-i, chord-i7, chord-iv, chord-iv7, 
-    chord-v, chord-v7, one, two
-  scales for richter: all, arabic, blues, blues-middle, chord-i, chord-i7, 
-    chord-i7om3, chord-iv, chord-iv7, chord-iv7om3, chord-v, chord-v7, 
-    chord-v7om3, drawbends, major, major-full, major-pentatonic, mape, mape4, 
-    mape5, middle, minor, minor-pentatonic, mipe, mixolydian, root
-  
+scales for chromatic: all, blues, blues-middle, chord-i, chord-i7, chord-iv, 
+    chord-iv7, chord-v, chord-v7, one, two
+  scales for richter: all, blues, blues-middle, chord-i, chord-i7, chord-i7om3, 
+    chord-iv, chord-iv7, chord-iv7om3, chord-v, chord-v7, chord-v7om3, drawbends, 
+    foo, major, major-full, major-pentatonic, mape, mape4, mape5, middle, minor, 
+    minor-pentatonic, mipe, mixolydian
+
+Note that advanced users may try to create their own scales, see usage
+of mode tools for an example
+
 .SH "OPTIONS"
 
 Besides the arguments for type, key and scale, there are a lot of
